# cpp-sprendimai

./: .gitignore  CMakeLists.txt  README.md
vbe/: CMakeLists.txt
vbe/2013-pavyzdine/: CMakeLists.txt
vbe/2013-pavyzdine/batai/: CMakeLists.txt  batai.cpp  readme.md
vbe/2014-pagrindine/: CMakeLists.txt
vbe/2014-pagrindine/balsavimo-rezultatai/: CMakeLists.txt  U1rez.txt  balsavimo-rezultatai.cpp  readme.md
vbe/2015-pagrindine/: CMakeLists.txt
vbe/2015-pagrindine/avys/: CMakeLists.txt  avys.cpp  readme.md
vbe/2016-pagrindine/: CMakeLists.txt
vbe/2016-pagrindine/manksta/: CMakeLists.txt  manksta.cpp  readme.md
vbe/2017-pagrindine/: CMakeLists.txt
vbe/2017-pagrindine/piesinys/: CMakeLists.txt  piesinys.cpp  readme.md
vbe/2018-pagrindine/: CMakeLists.txt
vbe/2018-pagrindine/slidininkai/: CMakeLists.txt  U2rez.txt  readme.md  slidininkai.cpp
vbe/2018-pagrindine/veliaveles/: CMakeLists.txt  readme.md  veliaveles.cpp
vbe/2019-pagrindine/: CMakeLists.txt
vbe/2019-pagrindine/sportas/: CMakeLists.txt  readme.md  sportas.cpp
vbe/2020-pagrindine/: CMakeLists.txt
vbe/2020-pagrindine/varzybos/: CMakeLists.txt  U2_2.txt  readme.md  varzybos.cpp
vbe/2021-pagrindine/: CMakeLists.txt
vbe/2021-pagrindine/apklausa/: CMakeLists.txt  U2rez.txt  apklausa.cpp  readme.md
vbe/2022-pagrindine/: CMakeLists.txt
vbe/2022-pagrindine/sportas-namuose/: CMakeLists.txt  readme.md  sportas-namuose.cpp
vbe/2023-pagrindine/: CMakeLists.txt
vbe/2023-pavyzdine/: CMakeLists.txt
vbe/2024-pagrindine/: CMakeLists.txt
vbe/2024-pavyzdine/: CMakeLists.txt
(+92 files in other folders)
