add_subdirectory(2013-pavyzdine)
add_subdirectory(2014-pagrindine)
add_subdirectory(2015-pagrindine)
add_subdirectory(2016-pagrindine)
add_subdirectory(2017-pagrindine)
add_subdirectory(2018-pagrindine)
add_subdirectory(2019-pagrindine)
add_subdirectory(2020-pagrindine)
add_subdirectory(2021-pagrindine)
add_subdirectory(2022-pagrindine)
add_subdirectory(2023-pagrindine)
add_subdirectory(2023-pavyzdine)
add_subdirectory(2024-pagrindine)
add_subdirectory(2024-pavyzdine)